fix:Layout shift fixed caused by the radix dropdown menu

--- a/styles/index.css
+++ b/styles/index.css
@@ -12,3 +12,7 @@
 @import './base.css';
 @import './markdown.css';
 @import './effects.css';
+
+html {
+  scrollbar-gutter: stable;
+}
